# fastapi-template

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
app/core/: __init__.py
app/database/: __init__.py  models.py
app/routers/: __init__.py
app/utils/classes/: __init__.py  config.py  config_factory.py  mixin.py
app/utils/exceptions/: __init__.py
